--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,27 +15,34 @@
         tools:targetApi="31">
         <activity
             android:name=".Sonstiges"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Karte"
-            android:exported="false" />
+            android:screenOrientation="portrait"
+            android:exported="false"/>
         <activity
             android:name=".Natur"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Ubermittlung"
             android:exported="false" />
         <activity
             android:name=".Pionier"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Samariter"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".Pfadigeschichte"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
